fixed header overflow

--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,5 @@ code {
 .App {
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
